--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.1.3'
 	id 'io.spring.dependency-management' version '1.1.3'
+	id 'jacoco'
+	id 'org.sonarqube' version '3.5.0.2730'
+	id 'checkstyle'
 }
 
 group = 'com.mtech'
@@ -36,4 +39,9 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+bootJar {
+	archiveFileName = "shiok_jobs_job_ms.jar"
+	archiveClassifier.set(null)
 }
