--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-spring.jpa.hibernate.ddl-auto=update
+# Database configuration
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/job
 spring.datasource.username=myuser
 spring.datasource.password=secret
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql: true
+
+# JPA configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
