update to use postgresql

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,35 +1,33 @@
 services:
-  mysql:
-    image: 'mysql:latest'
+  db:
+    image: 'postgres:15.4-alpine'
     environment:
-      - 'MYSQL_DATABASE=job'
-      - 'MYSQL_PASSWORD=secret'
-      - 'MYSQL_ROOT_PASSWORD=verysecret'
-      - 'MYSQL_USER=myuser'
+      - 'POSTGRES_PASSWORD=secret'
+      - 'POSTGRES_USER=job'
     ports:
-      - '3306:3306'
+      - '5432:5432'
     volumes:
-      - mysql-data:/var/lib/mysql
+      - db-data:/var/lib/postgresql/data
     networks:
-      - springboot-mysql-network
+      - springboot-db-network
 
   ms:
     depends_on:
-      - mysql
+      - db
     build:
       context: ./
       dockerfile: dockerfile
     ports:
       - '8888:8080'
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/job?autoReconnect=true&useSSL=false
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/job
     restart: on-failure
     networks:
-      - springboot-mysql-network
+      - springboot-db-network
 
 networks:
-  springboot-mysql-network:
+  springboot-db-network:
     driver: bridge
 
 volumes:
-  mysql-data:
+  db-data:
