--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # Database configuration
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/job
-spring.datasource.username=myuser
+spring.datasource.url=jdbc:postgresql://localhost:5432/job
+spring.datasource.username=job
 spring.datasource.password=secret
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
