--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 # Database configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/job
-spring.datasource.username=job
-spring.datasource.password=secret
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://192.168.10.129:5432/sjdb
+spring.datasource.username=sjmsjob
+spring.datasource.password=_p@ssw0rd
+spring.datasource.ssl=true
+spring.datasource.driver-cflass-name=org.postgresql.Driver
 
 # JPA configuration
 spring.jpa.hibernate.ddl-auto=update
