--- a/compose.yaml
+++ b/compose.yaml
@@ -2,12 +2,13 @@ services:
   db:
     image: 'postgres:15.4-alpine'
     environment:
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=job'
+      - 'POSTGRES_PASSWORD=postgres'
+      - 'POSTGRES_USER=_p@ssw0rd'
     ports:
       - '5432:5432'
     volumes:
       - db-data:/var/lib/postgresql/data
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - springboot-db-network
 
