--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.3'
 	id 'jacoco'
 	id 'org.sonarqube' version '3.5.0.2730'
-	id 'checkstyle'
+	//id 'checkstyle'
 }
 
 group = 'com.mtech'
@@ -46,20 +46,20 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
-
-checkstyle {
-	toolVersion = "10.10.0"
-	configFile = file("${project.rootDir}/config/checkstyle/checkstyle.xml")
-	ignoreFailures = true
-
-	checkstyleMain {
-		source ='src/main/java'
-	}
-
-	checkstyleTest {
-		source ='src/test/java'
-	}
-}
+//
+//checkstyle {
+//	toolVersion = "10.10.0"
+//	configFile = file("${project.rootDir}/config/checkstyle/checkstyle.xml")
+//	ignoreFailures = true
+//
+//	checkstyleMain {
+//		source ='src/main/java'
+//	}
+//
+//	checkstyleTest {
+//		source ='src/test/java'
+//	}
+//}
 
 bootJar {
 	archiveFileName = "shiok_jobs_job_ms.jar"
