added flyway, but not working in docker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
+
+spring.flyway.enabled=true
+spring.flyway.baselineOnMigrate=true
+spring.flyway.locations=classpath:db/migration
+flyway.url=jdbc:postgresql://localhost:5432/sjdb
+flyway.schema=sjmsjob
+flyway.user=sjmsjob
+flyway.password=_p@ssw0rd
