--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.3'
 	id 'jacoco'
 	id 'org.sonarqube' version '3.5.0.2730'
+	id "org.flywaydb.flyway" version "9.22.1"
 	//id 'checkstyle'
 }
 
@@ -30,7 +31,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
-
+	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+	implementation 'org.flywaydb:flyway-core'
 
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
