fix data migration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.flyway.enabled=true
 spring.flyway.baselineOnMigrate=true
 spring.flyway.locations=classpath:db/migration
-flyway.url=jdbc:postgresql://localhost:5432/sjdb
-flyway.schema=sjmsjob
-flyway.user=sjmsjob
-flyway.password=_p@ssw0rd
+spring.flyway.url=jdbc:postgresql://localhost:5432/sjdb
+spring.flyway.schemas=sjmsjob
+spring.flyway.user=sjmsjob
+spring.flyway.password=_p@ssw0rd
