--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # Database configuration
-spring.datasource.url=jdbc:postgresql://192.168.10.129:5432/sjdb
+spring.datasource.url=jdbc:postgresql://db:5432/sjdb
+# spring.datasource.url=jdbc:postgresql://192.168.10.129:5432/sjdb
 spring.datasource.username=sjmsjob
 spring.datasource.password=_p@ssw0rd
 spring.datasource.ssl=true
@@ -14,7 +15,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.flyway.enabled=true
 spring.flyway.baselineOnMigrate=true
 spring.flyway.locations=classpath:db/migration
-spring.flyway.url=jdbc:postgresql://localhost:5432/sjdb
+spring.flyway.url=jdbc:postgresql://db:5432/sjdb
 spring.flyway.schemas=sjmsjob
 spring.flyway.user=sjmsjob
 spring.flyway.password=_p@ssw0rd
