--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	//implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation('org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0')
 	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
-	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
