--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database configuration
-spring.datasource.url=jdbc:postgresql://192.168.10.129:5432/sjdb
+spring.datasource.url=jdbc:postgresql://db:5432/sjdb
 spring.datasource.username=sjmsjob
 spring.datasource.password=_p@ssw0rd
 spring.datasource.ssl=true
@@ -10,3 +10,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
+
+#spring.docker.compose.enabled=false
