--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,15 @@ tasks.named('test') {
 //	}
 //}
 
+sonarqube {
+	properties {
+		property "sonar.projectKey", "mtech-batch-31_shiok-jobs-job-ms"
+		property "sonar.organization", "mtech-batch-31"
+		property "sonar.host.url", "https://sonarcloud.io"
+		property 'sonar.coverage.jacoco.xmlReportPaths', "${project.buildDir}/reports/jacoco/test/jacocoTestReport.xml"
+	}
+}
+
 bootJar {
 	archiveFileName = "shiok_jobs_job_ms.jar"
 	archiveClassifier.set(null)
