--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -129,6 +129,9 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
+      - name: Update kube config
+        run: aws eks update-kubeconfig --name sj-jobs-ms
+
       - name: Deploy to EKS
         run: |
           kubectl apply -f kubernetes/deployment.yaml          
