--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -26,7 +26,7 @@ spec:
   selector:
     app: shiok-jobs-job-ms
   ports:
-    - port: 8888
+    - port: 8080
       targetPort: 8080
       nodePort: 30001
       protocol: TCP
@@ -46,3 +46,39 @@ spec:
   maxReplicas: 10
   targetCPUUtilizationPercentage: 50
 ---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: sj-ms-ingress
+  namespace: sj-ms-ingress
+  labels:
+    app: color-app
+  annotations:
+    kubernetes.io/ingress.class: alb
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/target-type: ip
+    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
+    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
+    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
+    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
+    alb.ingress.kubernetes.io/success-codes: '200'
+    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
+    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
+spec:
+  rules:
+    - http:
+        paths:
+          - path: /yellow
+            pathType: Prefix
+            backend:
+              service:
+                name: yellow-service
+                port:
+                  number: 80
+          - path: /green
+            pathType: Prefix
+            backend:
+              service:
+                name: green-service
+                port:
+                  number: 80
