Added deriving company Logos from s3 url configured in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.flyway.schemas=sjmsjob
 spring.flyway.user=sjmsjob
 spring.flyway.password=_p@ssw0rd
 
-#spring.docker.compose.enabled=false
+spring.docker.compose.enabled=true
 
 #application propertises
 sjmsjob.companyLogoUrl=https://shiok-jobs-company-images.s3.ap-southeast-1.amazonaws.com/images/
