--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
         run: ./gradlew test
 
   generate_jar:
-#    needs: code_scan
+    needs: code_scan
     name: Generate Jar File
     runs-on: ubuntu-latest
     steps:
@@ -110,6 +110,11 @@ jobs:
     runs-on: ubuntu-latest
     env:
       IMAGE_NAME: ${{ secrets.ECR_REPOSITORY_URL }}:latest
+      DATASOURCE_URL: ${{ secrets.DATASOURCE_URL }}
+      DATASOURCE_USER_ID: ${{ secrets.DATASOURCE_USER_ID }}
+      DATASOURCE_SECRET: ${{ secrets.DATASOURCE_SECRET }}
+      DATASOURCE_SCHEMAS: ${{ secrets.DATASOURCE_SCHEMAS }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -137,71 +142,73 @@ jobs:
       - name: Deploy to EKS
         run: |
           envsubst < kubernetes/deployment.yaml | kubectl apply -f -          
+          kubectl rollout restart deployment/sj-bff -n sj-ns
+          kubectl apply -f kubernetes/service.yaml
+          kubectl apply -f kubernetes/scaling.yaml
 
-# will continue zap scan later
-#  code_scan:
-#    needs: tests
-#    name: Analyze with SonarCloud
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v3
-#        with:
-#          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-#      - name: Set up JDK 17
-#        uses: actions/setup-java@v3
-#        with:
-#          java-version: '17'
-#          distribution: 'temurin'
-#
-#      - name: Cache Gradle packages
-#        uses: actions/cache@v3
-#        with:
-#          path: ~/.gradle/caches
-#          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-#          restore-keys: ${{ runner.os }}-gradle
-#
-#      - name: Cache SonarCloud packages
-#        uses: actions/cache@v3
-#        with:
-#          path: ~/.sonar/cache
-#          key: ${{ runner.os }}-sonar
-#          restore-keys: ${{ runner.os }}-sonar
-#
-#      - name: Build and analyze
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-#        run: ./gradlew build sonar --info
-#
-#      - name: Get SonarCloud quality gate status
-#        run: |
-#          STATUS=$(curl -s -u "${{ secrets.SONAR_TOKEN }}": "https://sonarcloud.io/api/qualitygates/project_status?projectKey=${{ secrets.PROJECT_KEY }}" | jq -r .projectStatus.status)
-#          echo "Quality gate status is $STATUS"
-#          if [[ "$STATUS" != "OK" ]]; then
-#          echo "Quality gate failed"
-#            exit 1
-#          fi
-#
-#      - name: Upload Code Coverage Artifacts
-#        uses: actions/upload-artifact@v3
-#        with:
-#          name: code-coverage-artifact
-#          path: |
-#            build/reports/jacoco/test/html/
-#
-#      - name: Upload Lint (Checkstyle) Artifacts
-#        uses: actions/upload-artifact@v3
-#        with:
-#          name: lint-artifact
-#          path: |
-#            build/reports/checkstyle/
-#
-#      - name: Upload SonarCloud Artifacts
-#        uses: actions/upload-artifact@v3
-#        with:
-#          name: sast-artifact
-#          path: |
-#            build/sonar/report-task.txt
+  code_scan:
+    needs: tests
+    name: Analyze with SonarCloud
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Cache Gradle packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+          restore-keys: ${{ runner.os }}-gradle
+
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+
+      - name: Build and analyze
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: ./gradlew build sonar --info
+
+      - name: Get SonarCloud quality gate status
+        run: |
+          STATUS=$(curl -s -u "${{ secrets.SONAR_TOKEN }}": "https://sonarcloud.io/api/qualitygates/project_status?projectKey=${{ secrets.PROJECT_KEY }}" | jq -r .projectStatus.status)
+          echo "Quality gate status is $STATUS"
+          if [[ "$STATUS" != "OK" ]]; then
+          echo "Quality gate failed"
+            exit 1
+          fi
+
+      - name: Upload Code Coverage Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: code-coverage-artifact
+          path: |
+            build/reports/jacoco/test/html/
+
+      - name: Upload Lint (Checkstyle) Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: lint-artifact
+          path: |
+            build/reports/checkstyle/
+
+      - name: Upload SonarCloud Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: sast-artifact
+          path: |
+            build/sonar/report-task.txt
 
 #  zap_scan:
 #    needs: deploy_to_eks
