--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -140,7 +140,7 @@ jobs:
 
       - name: Deploy to EKS
         run: |
-          envsubst < kubernetes/deployment.yaml | kubectl apply -f -          
+          envsubst < kubernetes/deployment.yml | kubectl apply -f -          
           kubectl rollout restart deployment/sj-bff -n sj-ns
           kubectl apply -f kubernetes/service.yaml
           kubectl apply -f kubernetes/scaling.yaml
