--- a/compose.yaml
+++ b/compose.yaml
@@ -22,6 +22,7 @@ services:
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/sjdb
       SPRING_FLYWAY_LOCATIONS: classpath:db/migration
+      sjmsjob.companyLogoUrl: https://shiok-jobs-company-images.s3.ap-southeast-1.amazonaws.com/images/
     restart: on-failure
     networks:
       - springboot-db-network
