--- a/kubernetes/scaling.yaml
+++ b/kubernetes/scaling.yaml
@@ -7,7 +7,7 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: sj-bff
+    name: sj-jobs
   minReplicas: 1
   maxReplicas: 10
   targetCPUUtilizationPercentage: 50
