test precommit hook

--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,15 @@ tasks.named('test') {
 	useJUnitPlatform()
 	finalizedBy jacocoTestReport
 }
+
+
+task installLocalGitHook(type: Copy){
+	from new File(rootProject.rootDir, 'scripts/pre-commit')
+	into { new File(rootProject.rootDir, '.git/hooks')}
+	fileMode 0775
+}
+
+build.dependsOn installLocalGitHook
 //
 //checkstyle {
 //	toolVersion = "10.10.0"
