commented out properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,6 @@ spring.flyway.user=sjmsjob
 spring.flyway.password=_p@ssw0rd
 
 spring.docker.compose.enabled=false
-server.port=8889
-#application propertises
+#server.port=8889
+#application properties
 sjmsjob.companyLogoUrl=https://shiok-jobs-company-images.s3.ap-southeast-1.amazonaws.com/images/
