limit memory to 256mb and scaling by memory value

--- a/kubernetes/scaling.yaml
+++ b/kubernetes/scaling.yaml
@@ -16,4 +16,4 @@ spec:
         name: memory
         target:
           type: Utilization
-          averageUtilization: 80
+          averageValue: 200Mi
