--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,9 @@ dependencies {
 	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 	implementation 'org.flywaydb:flyway-core'
+    implementation 'org.jetbrains:annotations:23.0.0'
 
-	compileOnly 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
 	runtimeOnly 'org.postgresql:postgresql'
@@ -58,7 +59,7 @@ task installLocalGitHook(type: Copy){
 }
 
 build.dependsOn installLocalGitHook
-//
+
 //checkstyle {
 //	toolVersion = "10.10.0"
 //	configFile = file("${project.rootDir}/config/checkstyle/checkstyle.xml")
