--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/sjdb
 # spring.datasource.url=jdbc:postgresql://192.168.10.129:5432/sjdb
 spring.datasource.username=sjmsjob
-spring.datasource.password=_p@ssw0rd
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.ssl=true
 spring.datasource.driver-cflass-name=org.postgresql.Driver
 
@@ -18,9 +18,8 @@ spring.flyway.locations=classpath:db/migration
 spring.flyway.url=jdbc:postgresql://localhost:5432/sjdb
 spring.flyway.schemas=sjmsjob
 spring.flyway.user=sjmsjob
-spring.flyway.password=_p@ssw0rd
+spring.flyway.password=${DB_PASSWORD}
 
 spring.docker.compose.enabled=false
 #server.port=8889
-#application properties
 sjmsjob.companyLogoUrl=https://shiok-jobs-company-images.s3.ap-southeast-1.amazonaws.com/images/
