update scaling by percentage

--- a/kubernetes/scaling.yaml
+++ b/kubernetes/scaling.yaml
@@ -16,4 +16,4 @@ spec:
         name: memory
         target:
           type: Utilization
-          averageValue: 200Mi
+          averageUtilization: 70
