--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,9 @@ spring.flyway.url=jdbc:postgresql://localhost:5432/sjdb
 spring.flyway.schemas=sjmsjob
 spring.flyway.user=sjmsjob
 spring.flyway.password=${DB_PASSWORD}
+spring.redis.host=${REDIS_HOST}
+spring.redis.port=${REDIS_PORT}
+#logging.level.com.mtech.sjmsjob=DEBUG
 
 spring.docker.compose.enabled=false
 #server.port=8889
