--- a/build.gradle
+++ b/build.gradle
@@ -105,10 +105,12 @@ jacocoTestReport {
 private excludedClassFilesForReport(classDirectories) {
 	classDirectories.setFrom(files(classDirectories.files.collect {
 		fileTree(dir: it, exclude: [
-				'**/config/*.class',
-				'**/entity/*.class',
-				'**/model/*.class',
-				'**/Application.class'
+				'**/config/**',
+				'**/entity/**',
+				'**/model/**',
+				'**/mappers/**',
+				'**/util/**',
+				'**/Application**'
 		])
 	}))
 }
