Revert "increase test coverage"
This reverts commit 85313976745d96793929e7d8aa5071cff19b9e95.

--- a/build.gradle
+++ b/build.gradle
@@ -105,12 +105,10 @@ jacocoTestReport {
 private excludedClassFilesForReport(classDirectories) {
 	classDirectories.setFrom(files(classDirectories.files.collect {
 		fileTree(dir: it, exclude: [
-				'**/config/**',
-				'**/entity/**',
-				'**/model/**',
-				'**/mappers/**',
-				'**/util/**',
-				'**/Application**'
+				'**/config/*.class',
+				'**/entity/*.class',
+				'**/model/*.class',
+				'**/Application.class'
 		])
 	}))
 }
