--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 # Database configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/sjdb
-# spring.datasource.url=jdbc:postgresql://192.168.10.129:5432/sjdb
 spring.datasource.username=sjmsjob
 spring.datasource.password=${DB_PASSWORD}
-spring.datasource.ssl=true
-spring.datasource.driver-cflass-name=org.postgresql.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA configuration
 spring.jpa.hibernate.ddl-auto=update
@@ -15,12 +13,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.flyway.enabled=true
 spring.flyway.baselineOnMigrate=true
 spring.flyway.locations=classpath:db/migration
-spring.flyway.url=jdbc:postgresql://localhost:5432/sjdb
-spring.flyway.schemas=sjmsjob
-spring.flyway.user=sjmsjob
+spring.flyway.url=${spring.datasource.url}
+spring.flyway.schemas=${spring.datasource.username}
+spring.flyway.user=${spring.datasource.username}
 spring.flyway.password=${DB_PASSWORD}
-spring.redis.host=${REDIS_HOST}
-spring.redis.port=${REDIS_PORT}
+
 #logging.level.com.mtech.sjmsjob=DEBUG
 
 spring.docker.compose.enabled=false
