--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.flyway.locations=classpath:db/migration
 spring.flyway.url=${spring.datasource.url}
 spring.flyway.schemas=${spring.datasource.username}
 spring.flyway.user=${spring.datasource.username}
-spring.flyway.password=${DB_PASSWORD}
+spring.flyway.password=${spring.datasource.password}
 
 #logging.level.com.mtech.sjmsjob=DEBUG
 
