added actuator health endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,8 @@ spring.flyway.password=${spring.datasource.password}
 spring.docker.compose.enabled=false
 #server.port=8889
 sjmsjob.companyLogoUrl=https://shiok-jobs-company-images.s3.ap-southeast-1.amazonaws.com/images/
+
+management.endpoint.health.enabled=true
+management.endpoints.web.exposure.include=health
+management.endpoints.web.base-path=/v1/jobs
+management.endpoint.health.show-details=never
