--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	//testImplementation 'org.springframework.security:spring-security-test'
+
+	runtimeOnly "org.springframework.boot:spring-boot-starter-actuator"
 }
 
 tasks.named('test') {
