--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,5 +26,6 @@ sjmsjob.companyLogoUrl=https://shiok-jobs-company-images.s3.ap-southeast-1.amazo
 
 management.endpoint.health.enabled=true
 management.endpoints.web.exposure.include=health
-management.endpoints.web.base-path=/v1/jobs
+management.endpoints.web.base-path=/v1
+management.endpoints.web.path-mapping.health=/jobs/health
 management.endpoint.health.show-details=never
