--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,5 +27,5 @@ sjmsjob.companyLogoUrl=https://shiok-jobs-company-images.s3.ap-southeast-1.amazo
 management.endpoint.health.enabled=true
 management.endpoints.web.exposure.include=health
 management.endpoints.web.base-path=/v1
-management.endpoints.web.path-mapping.health=/jobs/health
+management.endpoints.web.path-mapping.health=/jobs/actuator
 management.endpoint.health.show-details=never
